# tinder-clone

./: docker-compose.yml  pyproject.toml
app/: main.py
app/alembic/: env.py
app/alembic/versions/: 2025_10_19_1535-e681462499d8_add_access_token.py  2025_10_19_1548-fcac525d5d25_first.py
app/api/dependencies/: backend.py  users.py
app/api/dependencies/authentication/: access_tokens.py  strategy.py  user_manager.py  users.py
app/core/: config.py
app/core/authentication/: transport.py  user_manager.py
app/core/models/: __init__.py  access_token.py  base.py  db_helper.py  profile.py  user.py
app/core/types/: user_id.py
app/service/: __init__.py
app/service/auth/: token.py
app/service/crypt/: hash.py
