[project]
name = "tinder-clone"
version = "0.1.0"
description = ""
authors = [
    {name = "max",email = "DubrovinMax1256@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "asyncio (>=4.0.0,<5.0.0)",
    "pydantic-settings (>=2.11.0,<3.0.0)",
    "uvicorn (>=0.37.0,<0.38.0)",
    "alembic (>=1.17.0,<2.0.0)",
    "fastapi (>=0.119.0,<0.120.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "bcrypt (>=4.0.1,<5.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "aiosqlite (>=0.21.0,<0.22.0)",
    "black (>=25.9.0,<26.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "pydantic[email] (>=2.12.3,<3.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "authx (>=1.4.3,<2.0.0)",
    "fastapi-users[sqlalchemy] (>=14.0.1,<15.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
